# Litterbox

./: ARCHITECTURE.md  README.md  build-and-test.sh  compile.sh  installer.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-and-test.yml  make-release.yml  publish-website.yml  tag-on-version-change.yml
lbx-init/: Cargo.toml
lbx-init/src/: files.rs  main.rs  sandbox.rs  utils.rs
lbx-init/src/commands/: entrypoint.rs  mod.rs  wait.rs
litterbox/: Cargo.toml
litterbox/scripts/: litterbox-helper.sh
litterbox/src/: agent.rs  daemon.rs  devices.rs  env.rs  files.rs  keys.rs  main.rs  podman.rs  settings.rs  utils.rs
litterbox/src/commands/: confirm.rs  enter.rs  mod.rs
litterbox/templates/: cachyos.Dockerfile  tumbleweed.Dockerfile
shared/: Cargo.toml
shared/src/: entrypoint.rs  env.rs  lib.rs
website/: package.json  pnpm-lock.yaml
website/static/: install.sh
