[package]
name = "lbx-init"
version = "0.6.1"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nix = { version = "0.31", features = ["fs", "inotify", "signal", "user"] }
landlock = "0.4"
